--- a/src/app/product/components/product/product.component.html
+++ b/src/app/product/components/product/product.component.html
@@ -1,1 +1,21 @@
-<p>product-component works!</p>
+<p-card
+  header="{{ product.title }}"
+  subheader="Card Subheader"
+  styleClass="p-card-shadow"
+>
+  <ng-template pTemplate="header">
+    <div class="image" style="background-image: url({{product.thumbnail}});"></div>
+  </ng-template>
+  <p class="description">
+    {{ product.description }}
+  </p>
+  <ng-template pTemplate="footer">
+    <p-button
+      label="Buy"
+      icon="pi pi-shopping-cart"
+      (click)="onAddToCart(product)"
+    ></p-button>
+  </ng-template>
+</p-card>
+
+<p-toast></p-toast>
