--- a/src/app/product/components/product-list/product-list.component.html
+++ b/src/app/product/components/product-list/product-list.component.html
@@ -1,1 +1,8 @@
-<p>product-list works!</p>
+<div class="container">
+    <div class="product-list">
+      <app-product
+        *ngFor="let product of products"
+        [product]="product"
+      ></app-product>
+    </div>
+</div>
